# gpr200-fa2024-steven-bruns

./: CMakeLists.txt
GPR-200-Final/assignments/assignment2/: main.cpp
GPR-200-Final/assignments/assignment2/assets/: fragmentShaderBG.fs  vertexShaderBG.vs
GPR-200-Final/assignments/assignment4/: main.cpp
GPR-200-Final/assignments/assignment5/: main.cpp
GPR-200-Final/assignments/assignment5/assets/: fragmentShaderBG.fs
GPR-200-Final/core/: CMakeLists.txt
GPR-200-Final/core/MyLibrary/: Texture2D.cpp  Texture2D.h  shader.cpp  shader.h
assignments/assignment1_helloTriangle/: main.cpp
assignments/assignment2/: main.cpp
assignments/assignment2/assets/: fragmentShader.fs  fragmentShaderBG.fs  vertexShader.vs
assignments/assignment4/: main.cpp
assignments/assignment4/assets/: fragmentShader.fs  fragmentShaderBG.fs
assignments/assignment5/: main.cpp
assignments/assignment5/assets/: fragmentShader.fs  fragmentShaderBG.fs  vertexShader.vs  vertexShaderBG.vs
assignments/gpr-200-final/: CMakeLists.txt  imgui.ini  main.cpp
assignments/gpr-200-final/assets/: fragmentShader.fs  grassFragmentShader.fs  grassVertexShader.vs  skybox.fs  skybox.vs  vertexShader.vs
core/: CMakeLists.txt
core/MyLibrary/: Texture2D.cpp  Texture2D.h  camera.cpp  camera.h  shader.cpp  shader.h
